<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/leftContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5pt"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_left_text"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20pt"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_right_text"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10pt"
        android:onClick="onGuessClick"
        android:text="@string/btn_guess_text"
        android:textSize="10pt"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="5pt"
        android:textColor="#ff0000"
        android:textAlignment="center"/>

</LinearLayout>